[package]
name = "remote-backup"
version = "0.2.0"
authors = ["Denis Crespe <denis.crespe@globaljetlux.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
clap = "^2.33"
subprocess = "^0.2"
obfstr = "^0.4"
